fix: Fix active Input color overflow with X button and Dropdown in Search dialog

--- a/www/src/styles/algolia/style.css
+++ b/www/src/styles/algolia/style.css
@@ -171,6 +171,9 @@ html.dark {
   margin: 0;
   padding: 0;
 }
+.DocSearch-Reset {
+  margin-inline-start: 12px;
+}
 .DocSearch-MagnifierLabel,
 .DocSearch-Reset {
   align-items: center;
@@ -231,6 +234,7 @@ html.dark {
   display: none;
 }
 .DocSearch-Dropdown {
+  margin-top: 10px;
   max-height: calc(
     var(--docsearch-modal-height) - var(--docsearch-searchbox-height) -
       var(--docsearch-spacing) - var(--docsearch-footer-height)
